Opened 11 years ago
Closed 11 years ago
#10090 closed bug (fixed)
checkfs help seems incorrect
Reported by: | jessicah | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Command Line Tools | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Options to checkfs says checkfs [options] <device> <volume>, but it appears the correct usage is checkfs [options] <volume>.
Change History (2)
comment:1 by , 11 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
comment:2 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev46225.
It can actually take either a volume name or alternatively a path to the device, just not both at once. Adjusted text accordingly.