Fix #10090.

- The checkfs help text is worded such that it would appear to require
both a device name and volume name when it actually requires either one
or the other.